[metadata]
name = canvasdl
version = 1.4.17
author = Quinten Roets
author_email = quinten.roets@gmail.com
description = course content synchronizer
description-file = README.md 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quintenroets/canvasdl
download_url = https://github.com/quintenroets/canvasdl/archive/refs/tags/v1.4.11.tar.gz
license = MIT

[options]
packages = find:
include_package_data = True
package_dir =
    = .
install_requires =
    beautifulsoup4
    canvasapi
    dacite
    fire-downloader
    gcsa
    html5lib
    ics
    m3u8
    pandas
    piazza-api
    python-dateutil
    pywebcopy
    quinten-cli
    superpathlib
    video_exporter

[options.entry_points]
console_scripts =
    canvasdl = canvasdl:main
    canvasdlcheck = canvasdl.core.checkservice:main

[options.package_data]
canvasdl = assets/**

[options.packages.find]
where = .

[bdist_wheel]
universal = true
